Changed about me picture, fixed buttons/text overflowing in project section for screens under 1280px

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3497,7 +3497,7 @@ body.is-touch #banner {
 
 		.spotlight.left .content, .spotlight.right .content {
 			padding: 4.5em 2.5em;
-			width: 25em;
+			width: 34.05em;
 		}
 
 	/* Wrapper */
